--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,12 +14,13 @@
         android:paddingRight="24dp"
         android:paddingTop="56dp">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:src="@drawable/ic_smoke_free_black_24dp" />
+            android:text="Fancy Logo"
+            android:textSize="40dip" />
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
@@ -57,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/button_stroke"
+            android:background="@drawable/login_button"
             android:padding="12dp"
             android:text="Login" />
 
