--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,5 +40,15 @@
                 android:inputType="textPassword"/>
         </android.support.design.widget.TextInputLayout>
 
+        <Button
+            android:id="@+id/btn_login_fragment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/login_button"
+            android:padding="12dp"
+            android:text="Login" />
+
     </LinearLayout>
 </RelativeLayout>
