--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,15 @@
     <color name="blue_grey_800">#37474F</color>
     <color name="blue_grey_900">#263238</color>
 
-    <color name="primary">#ED6A5A</color>
-    <color name="background">#383F51</color>
-    <color name="primary_dark">#FE5F55</color>
-    <color name="accent">#9CBFA7</color>
+    <!--<color name="primary">#ED6A5A</color>-->
+    <!--<color name="background">#383F51</color>-->
+    <!--<color name="primary_dark">#FE5F55</color>-->
+    <!--<color name="accent">#9CBFA7</color>-->
+
+    <color name="primary">#49A078</color>
+    <color name="background">#F7F7F7</color>
+    <color name="primary_dark">#073b3a</color>
+    <color name="accent">#EFEFEF</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
