--- a/app/src/main/res/drawable/login_button.xml
+++ b/app/src/main/res/drawable/login_button.xml
@@ -2,12 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/white" />
-            <corners android:radius="10dp" />
-            <solid android:color="@color/background" />
+            <corners android:radius="5dp" />
+            <solid android:color="@color/primary" />
 
         </shape>
-    </item>
 
+    </item>
 
 </selector>
