--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,68 +2,48 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
+    tools:context="com.v4.nate.smokedetect.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
         android:paddingTop="56dp">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:src="@drawable/ic_smoke_free_black_24dp" />
+            android:text="Fancy Logo"
+            android:textSize="40dip" />
 
-        <!--  Name Label -->
+        <!--Email label-->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:textColorHint="@color/monsoon"
-            android:textColor="@color/monsoon"
-            android:layout_marginTop="8dp">
-
-            <EditText
-                android:id="@+id/input_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/edittext"
-                android:padding="12dp"
-                android:hint="NAME"
-                android:inputType="textCapWords" />
-        </android.support.design.widget.TextInputLayout>
-
-        <!-- Email Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:textColorHint="@color/monsoon"
-            android:textColor="@color/monsoon"
             android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="EMAIL"
                 android:background="@drawable/edittext"
                 android:padding="12dp"
-                android:hint="EMAIL"
                 android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Label -->
+        <!--Password label-->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:textColorHint="@color/monsoon"
-            android:textColor="@color/monsoon"
             android:layout_marginTop="8dp">
 
             <EditText
@@ -71,32 +51,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/edittext"
-                android:padding="12dp"
                 android:hint="PASSWORD"
+                android:padding="12dp"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Signup Button -->
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_signup"
+            android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/login_button"
-            android:textColor="@color/background"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
+            android:background="@drawable/login_button"
+            android:layout_marginBottom="24dp"
+            android:textSize="18dp"
+            android:textColor="@color/background"
             android:padding="12dp"
-            android:text="Create Account" />
+            android:text="Login" />
 
         <TextView
-            android:id="@+id/link_login"
+            android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:textColor="@color/monsoon"
+            android:text="No account yet? Create one."
             android:gravity="center"
-            android:text="Already a member? Login"
-            android:textSize="16dip" />
+            android:textSize="16dp" />
 
     </LinearLayout>
 </ScrollView>
