--- a/app/src/main/res/animator/center_to_right.xml
+++ b/app/src/main/res/animator/center_to_right.xml
@@ -2,8 +2,10 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
 
-    <translate
+    <objectAnimator
         android:duration="400"
-        android:fromXDelta="0%"
-        android:toXDelta="100%" />
+        android:propertyName="x"
+        android:valueFrom="0"
+        android:valueTo="1000"
+        android:valueType="floatType" />
 </set>
