--- a/app/src/main/res/animator/left_to_center.xml
+++ b/app/src/main/res/animator/left_to_center.xml
@@ -2,8 +2,10 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
 
-    <translate
+    <objectAnimator
         android:duration="400"
-        android:fromXDelta="-100%"
-        android:toXDelta="0%" />
+        android:propertyName="x"
+        android:valueFrom="-1000"
+        android:valueTo="0"
+        android:valueType="floatType" />
 </set>
