--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,73 +4,11 @@
     android:layout_height="match_parent"
     android:layout_weight="1">
 
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/welcomeFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingTop="56dp">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
-            android:text="Fancy Logo"
-            android:textColor="@color/primary"
-            android:textSize="40dip" />
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingTop="56dp">
-
-
-        <!--<TextView-->
-            <!--android:id="@+id/text_account"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginBottom="4dp"-->
-            <!--android:gravity="center"-->
-            <!--android:textSize="14dip"-->
-            <!--android:text="Already have an account?"-->
-            <!--android:textAllCaps="true"/>-->
-
-        <!--Register Device Button-->
-        <Button
-            android:id="@+id/btn_registerDevice"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/login_button"
-            android:textColor="@color/background"
-            android:text="Register Device"
-            android:stateListAnimator="@null"
-            android:textSize="18dip" />
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:textColor="@color/background"
-            android:background="@drawable/login_button"
-            android:text="login"
-            android:stateListAnimator="@null"
-            android:textSize="18dip" />
-
-    </LinearLayout>
+        android:layout_marginTop="10dp"></FrameLayout>
 
 </RelativeLayout>
 
