--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,39 +13,68 @@
         android:paddingRight="50dp"
         android:paddingTop="56dp">
 
-        <EditText
-            android:id="@+id/username"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="72dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="24dp"
+            android:text="Fancy Logo"
+            android:textSize="40dip" />
+
+        <!--Email label-->
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:ems="10"
-            android:hint="sdfsdfsdfsdf"
-            android:inputType="textEmailAddress" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp">
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/username"
-            android:ems="10"
-            android:hint="Password" />
+            <EditText
+                android:id="@+id/input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="EMAIL"
+                android:background="@drawable/edittext"
+                android:padding="12dp"
+                android:inputType="textEmailAddress" />
+        </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+        <!--Password label-->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password"
-            android:onClick="tryLogin"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext"
+                android:hint="PASSWORD"
+                android:padding="12dp"
+                android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/login_button"
+            android:layout_marginBottom="24dp"
+            android:textSize="18dp"
+            android:textColor="@color/background"
+            android:padding="12dp"
             android:text="Login" />
 
         <TextView
-            android:id="@+id/error"
-            android:layout_width="wrap_content"
+            android:id="@+id/link_signup"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/username"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textColor="#ffff0000" />
+            android:layout_marginBottom="24dp"
+            android:text="No account yet? Create one."
+            android:gravity="center"
+            android:textSize="16dp" />
+
     </LinearLayout>
-</RelativeLayout>
+</ScrollView>
