--- a/app/src/main/res/animator/right_to_center.xml
+++ b/app/src/main/res/animator/right_to_center.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
 
-    <translate
+    <objectAnimator
         android:duration="400"
         android:propertyName="x"
         android:valueFrom="1000"
