--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,18 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingLeft="34dp"
+        android:paddingRight="34dp"
         android:paddingTop="56dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
-            android:text="Fancy Logo"
-            android:textSize="40dip" />
 
         <!--Email label-->
         <android.support.design.widget.TextInputLayout
@@ -31,10 +24,11 @@
             <EditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:hint="EMAIL"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
                 android:background="@drawable/edittext"
-                android:padding="12dp"
                 android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
@@ -48,33 +42,33 @@
             <EditText
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
                 android:background="@drawable/edittext"
                 android:hint="PASSWORD"
-                android:padding="12dp"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/login_button"
             android:layout_marginBottom="24dp"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textColor="@color/background"
-            android:padding="12dp"
             android:text="Login" />
 
         <TextView
             android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="100dp"
             android:text="No account yet? Create one."
             android:gravity="center"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
