--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,62 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
-    tools:context="com.v4.nate.smokedetect.RegisterActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.v4.nate.smokedetect.RegisterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingLeft="34dp"
+        android:paddingRight="34dp"
         android:paddingTop="56dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
-            android:text="Fancy Logo"
-            android:textSize="40dip" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="150dp"
-            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="14dp"
             android:layout_marginTop="120dp">
+
             <EditText
                 android:id="@+id/input_registration_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:maxLength="10"
                 android:hint="Code"
-                android:inputType="textVisiblePassword"/>
+                android:inputType="textVisiblePassword"
+                android:maxLength="10" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="14dp"
             android:text="@string/registration_prompt"
-            android:textAlignment="center"
-
-            />
+            android:textAlignment="center" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_registerDevice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginBottom="200dp"
             android:layout_marginTop="14dp"
-            android:layout_marginBottom="24dp"
-            android:textColor="@color/background"
             android:background="@drawable/login_button"
-            android:padding="12dp"
-            android:text="Register Device" />
+            android:text="Register Device"
+            android:textColor="@color/background" />
     </LinearLayout>
-</ScrollView>
+
+</RelativeLayout>
