--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.v4.nate.smokedetect.SignupFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="56dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
-            android:src="@drawable/ic_smoke_free_black_24dp" />
+        android:layout_alignParentBottom="true"
+        android:paddingLeft="34dp"
+        android:paddingRight="34dp"
+        android:orientation="vertical">
 
         <!--  Name Label -->
         <android.support.design.widget.TextInputLayout
@@ -31,9 +25,10 @@
             <EditText
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:background="@drawable/edittext"
-                android:padding="12dp"
+                android:paddingStart="8dp"
+                android:paddingLeft="8dp"
                 android:hint="NAME"
                 android:inputType="textCapWords" />
         </android.support.design.widget.TextInputLayout>
@@ -50,9 +45,10 @@
             <EditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:background="@drawable/edittext"
-                android:padding="12dp"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
                 android:hint="EMAIL"
                 android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
@@ -69,9 +65,10 @@
             <EditText
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:background="@drawable/edittext"
-                android:padding="12dp"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
                 android:hint="PASSWORD"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
@@ -80,12 +77,11 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@drawable/login_button"
             android:textColor="@color/background"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:padding="12dp"
             android:text="Create Account" />
 
         <TextView
@@ -96,7 +92,8 @@
             android:textColor="@color/monsoon"
             android:gravity="center"
             android:text="Already a member? Login"
-            android:textSize="16dip" />
+            android:textSize="16sp" />
 
     </LinearLayout>
-</ScrollView>
+
+</RelativeLayout>
