--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -8,67 +8,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingTop="56dp">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
-            android:text="Fancy Logo"
-            android:textColor="@color/primary"
-            android:textSize="40dip" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingRight="34dp"
+        android:paddingLeft="34dp"
         android:paddingTop="56dp">
-
-
-        <!--<TextView-->
-        <!--android:id="@+id/text_account"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="4dp"-->
-        <!--android:gravity="center"-->
-        <!--android:textSize="14dip"-->
-        <!--android:text="Already have an account?"-->
-        <!--android:textAllCaps="true"/>-->
 
         <!--Register Device Button-->
         <Button
             android:id="@+id/btn_registerDevice"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginBottom="24dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/login_button"
-            android:stateListAnimator="@null"
             android:text="Register Device"
             android:textColor="@color/background"
-            android:textSize="18dip" />
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="80dp"
             android:background="@drawable/login_button"
             android:stateListAnimator="@null"
             android:text="login"
             android:textColor="@color/background"
-            android:textSize="18dip" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
