Added template notification preferences page

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.LandingActivity">
 
@@ -13,39 +13,20 @@
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:paddingTop="24dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="4dp"
-            android:text="Welcome to the landing page."
-            android:textAlignment="center" />
-        <ImageView
-            android:src="@drawable/ic_smoke_free_black_24dp"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="start" />
-
-    </LinearLayout>
+        android:paddingTop="24dp"></LinearLayout>
     <!--nav open-->
     <ListView
+        android:id="@+id/navList"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:id="@+id/navList"
-        android:choiceMode="singleChoice"
-        android:background="@color/accent">
-    </ListView>
+        android:background="@color/accent"
+        android:choiceMode="singleChoice"></ListView>
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
-    </FrameLayout>
+        android:layout_marginTop="10dp"></FrameLayout>
 
 </android.support.v4.widget.DrawerLayout>
