--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:textColor">@color/monsoon</item>
 
         <item name="colorButtonNormal">@color/blue_grey_800</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
 
 
     </style>
