Added "localize" setting option, currently does nothing

--- a/app/src/main/res/xml/notification_preferences.xml
+++ b/app/src/main/res/xml/notification_preferences.xml
@@ -18,7 +18,7 @@
 
         <android.support.v7.preference.SwitchPreferenceCompat
             android:defaultValue="false"
-            android:key="Key3"
+            android:key="localized"
             android:summary="Notification identifies which smoke detector is going off"
             android:title="Localized Notifications" />
 
