Added some blank fragments to fill later

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.DetectorHealthFragment">
+    tools:context="com.v4.nate.smokedetect.HistoryFragment">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:text="This shows the detector health"
+        android:text="This shows the history"
         android:textColor="@color/black"
         android:textSize="25sp" />
 
