--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,15 +21,15 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="EMAIL"
-                android:paddingLeft="8dp"
-                android:paddingStart="8dp"
                 android:background="@drawable/edittext"
-                android:inputType="textEmailAddress" />
+                android:hint="EMAIL"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp" />
         </android.support.design.widget.TextInputLayout>
 
         <!--Password label-->
@@ -39,35 +39,35 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:paddingLeft="8dp"
-                android:paddingStart="8dp"
                 android:background="@drawable/edittext"
                 android:hint="PASSWORD"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/login_button"
-            android:layout_marginBottom="24dp"
-            android:textSize="18sp"
+            android:text="Login"
             android:textColor="@color/background"
-            android:text="Login" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
-            android:text="No account yet? Create one."
             android:gravity="center"
+            android:text="No account yet? Create one."
             android:textSize="16sp" />
 
     </LinearLayout>
