--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,9 +20,9 @@
 
     </style>
 
-    <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/background</item>
-        <item name="android:textColorPrimary">@color/iron</item>
+    <style name="AppTheme.Welcome.Dialog" parent="Theme.AppCompat.Dialog">
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/accent</item>
         <item name="android:background">@color/primary_dark</item>
     </style>
 
