--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="@color/accent" />
+            <solid android:color="@color/color_accent" />
 
         </shape>
 
