--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -20,7 +20,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/accent"
+        android:background="@color/color_accent"
         android:choiceMode="singleChoice"></ListView>
 
     <FrameLayout
