--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,8 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_gravity="center_horizontal"
-            android:text="Abode"
-            android:textSize="40dp" />
+            android:text="@string/app_name"
+            android:textSize="40sp" />
 
         <FrameLayout
             android:id="@+id/welcomeFrameLayout"
