--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,13 +41,10 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_registerDevice"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            style="@style/Abode.LaunchButton"
             android:layout_marginBottom="200dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/login_button"
-            android:text="Register Device"
-            android:textColor="@color/background" />
+            android:text="@string/register" />
     </LinearLayout>
 
 </RelativeLayout>
