--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <style name="AppTheme.Welcome" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/color_accent</item>
 
-        <item name="android:windowBackground">@color/background</item>
+        <item name="android:windowBackground">@color/color_background</item>
 
         <item name="colorControlNormal">@color/monsoon</item>
         <item name="colorControlActivated">@color/monsoon</item>
@@ -16,14 +16,31 @@
 
         <item name="colorButtonNormal">@color/blue_grey_800</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+    </style>
 
+    <style name="Abode" />
 
+    <style name="Abode.TextEdit">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@drawable/edittext</item>
+        <item name="android:padding">@dimen/text_padding</item>
+        <item name="android:textColor">@color/color_text</item>
+        <item name="android:textColorHint">@color/color_text</item>
+    </style>
+
+    <style name="Abode.LaunchButton">
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:background">@drawable/login_button</item>
+        <item name="android:textColor">@color/color_background</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="AppTheme.Welcome.Dialog" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/accent</item>
-        <item name="android:textColorPrimary">@color/accent</item>
-        <item name="android:background">@color/primary_dark</item>
+        <item name="colorAccent">@color/color_accent</item>
+        <item name="android:textColorPrimary">@color/color_accent</item>
+        <item name="android:background">@color/color_primary_dark</item>
     </style>
 
 </resources>
