--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,7 +41,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_registerDevice"
-            style="@style/Abode.LaunchButton"
+            style="@style/Smoldr.LaunchButton"
             android:layout_marginBottom="200dp"
             android:layout_marginTop="14dp"
             android:text="@string/register" />
