--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,9 +18,9 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
 
-    <style name="Abode" />
+    <style name="Smoldr" />
 
-    <style name="Abode.TextEdit">
+    <style name="Smoldr.TextEdit">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@drawable/edittext</item>
@@ -29,7 +29,7 @@
         <item name="android:textColorHint">@color/color_text</item>
     </style>
 
-    <style name="Abode.LaunchButton">
+    <style name="Smoldr.LaunchButton">
         <item name="android:layout_height">40dp</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:background">@drawable/login_button</item>
