#20 Basic update of layout on successful receive from server

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -6,6 +6,7 @@
     tools:context="com.v4.nate.smokedetect.HistoryFragment">
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
