Fetches wifi ssid and allows user to input and push password to server

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,13 @@
         <item name="android:background">@color/color_primary_dark</item>
     </style>
 
+    <style name="AppTheme.Welcome.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.Welcome.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.Welcome.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
