--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="standard_field_width">200dp</dimen>
     <dimen name="text_padding">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
