Basics of expandable list view in place, no real-time update

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -19,7 +19,7 @@
             style="@style/Smoldr.LaunchButton"
             android:text="History" />
 
-        <ExpandableListViewListView
+        <ExpandableListView
             android:id="@+id/history_list"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent" />
