Localized notification option works, reports device ID if wanted by user

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,5 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"></ExpandableListView>
+        android:layout_alignParentTop="true">
+
+    </ExpandableListView>
 </android.support.v4.widget.SwipeRefreshLayout>
