--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,8 +18,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="14dp"
-            android:layout_marginTop="120dp">
+            android:layout_marginBottom="14dp">
 
             <EditText
                 android:id="@+id/input_registration_code"
@@ -28,7 +27,7 @@
                 android:gravity="center"
                 android:hint="Code"
                 android:inputType="textVisiblePassword"
-                android:maxLength="10" />
+                android:maxLength="6" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
@@ -39,12 +38,39 @@
             android:text="@string/registration_prompt"
             android:textAlignment="center" />
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="14dp"
+            android:layout_marginTop="14dp">
+
+            <EditText
+                android:id="@+id/input_device_nickname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Name"
+                android:inputType="textVisiblePassword"
+                android:maxLength="30" />
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="34dp"
+            android:text="@string/nickname_prompt"
+            android:textAlignment="center" />
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_registerDevice"
             style="@style/Smoldr.LaunchButton"
             android:layout_marginBottom="200dp"
             android:layout_marginTop="14dp"
             android:text="@string/register" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
