History works as the most basic level

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -13,7 +13,15 @@
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:paddingTop="24dp"></LinearLayout>
+        android:paddingTop="24dp">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="function"
+            android:src="@drawable/ic_smoke_free_black_24dp" />
+    </LinearLayout>
     <!--nav open-->
     <ListView
         android:id="@+id/navList"
@@ -21,12 +29,15 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/color_accent"
-        android:choiceMode="singleChoice"></ListView>
+        android:choiceMode="singleChoice">
+
+    </ListView>
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"></FrameLayout>
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </android.support.v4.widget.DrawerLayout>
