--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="blue_grey_900">#263238</color>
 
     <color name="color_primary">#49A078</color>
-    <color name="color_background">#F7F7F7</color>
+    <color name="color_background">#FFFFFF</color>
     <color name="color_primary_dark">#073b3a</color>
     <color name="color_accent">#EFEFEF</color>
 
