Fetches device list from database and displays on landing page. looks bad.

--- a/app/src/main/res/layout/fragment_device_list.xml
+++ b/app/src/main/res/layout/fragment_device_list.xml
@@ -5,4 +5,12 @@
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.DeviceListFragment">
 
+    <ExpandableListView
+        android:id="@+id/device_List"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"></ExpandableListView>
+
+
 </android.support.constraint.ConstraintLayout>
